--- a/shipment-consumer/shipment-consumer-infra/pom.xml
+++ b/shipment-consumer/shipment-consumer-infra/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>org.odyildiz</groupId>
+        <artifactId>shipment-consumer</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+
     <groupId>org.odyildiz</groupId>
     <artifactId>shipment-consumer-infra</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -17,6 +17,20 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.odyildiz</groupId>
+            <artifactId>shipment-consumer-domain</artifactId>
+            <scope>compile</scope>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
