--- a/shipment-consumer/shipment-consumer-infra/src/main/resources/application.yaml
+++ b/shipment-consumer/shipment-consumer-infra/src/main/resources/application.yaml
@@ -3,3 +3,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/shipment
     username: odyildiz
     password: pswrd
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
