Add rabbit connection to shipment consumer, fix problems and refactoring payment api

--- a/payment-api/payment-infra/src/main/resources/application.yaml
+++ b/payment-api/payment-infra/src/main/resources/application.yaml
@@ -1,5 +1,13 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/shipping
+    url: jdbc:postgresql://localhost:5432/shipment
     username: odyildiz
     password: pswrd
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+logging:
+  level:
+    org.springframework.data : debug
